# rb2sv

./: .gitignore  README.md  pyproject.toml
examples/: example_config.yaml
src/: config.py  error.py  main.py  rb2sv.py  sv2rb.py  utils.py
src/interfaces/: base_converter.py  image.py  point_cloud_2.py  pose_stamped.py
src/model/: error.py
src/utils/: bidict_filtered.py  util.py
