[tool.poetry]
name = "rb2sv"
version = "0.1.0"
description = "rb2sv is a tool for extracting data from ROS bags and converting it to the Supervisely format."
authors = ["YUAN CHUN, LO"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
poethepoet = "^0.29.0"


[tool.poe.tasks.rb2sv]
cmd = "python ./src/main.py"
cwd = "."


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
