[tool.poetry]
name = "rb2sv"
version = "0.1.0"
description = "rb2sv is a tool for extracting data from ROS bags and converting it to the Supervisely format."
authors = ["YUAN CHUN, LO"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
pyyaml = "^6.0.2"
open3d = "^0.18.0"
scikit-learn = "^1.5.2"
addict = "^2.4.0"
pillow = "^11.0.0"
pandas = "^2.2.3"
tqdm = "^4.67.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
poethepoet = "^0.29.0"


[tool.poe.tasks.rb2sv]
cmd = "python ./src/main.py"
cwd = "."


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
